-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 18, 19
-
Component/s: hotspot
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284259 | 18.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8283822 | 17.0.4-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8283943 | 17.0.4 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8284138 | 11.0.16-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8284350 | 11.0.16 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
-
-
-
- backported by
-
JDK-8283822 [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8283943 [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8284138 [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8284259 [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8284350 [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
- relates to
-
JDK-8279125 fatal error: no reachable node should have no use
-
- Closed
-
-
JDK-8279062 C2: assert(t->meet(t0) == t) failed: Not monotonic after JDK-8278413
-
- Closed
-
-
JDK-8292260 [BACKOUT] JDK-8279219: [REDO] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8278413 C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8279204 [BACKOUT] JDK-8278413: C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8292301 [REDO v2] C2 crash when allocating array of size too large
-
- Resolved
-
-
JDK-8284369 TestFailedAllocationBadGraph fails with -XX:TieredStopAtLevel < 4
-
- Resolved
-
-
JDK-8279021 Shenandoah: assert(dead != C->root()) failed: killing root, eh? after JDK-8278413
-
- Closed
-
-
JDK-8291665 C2: assert compiling SSLEngineInputRecord::decodeInputRecord
-
- Closed
-
-
JDK-8291919 [11u] High compiler native memory consumption after JDK-8279219
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/9ce8530c
-
Commit
openjdk/jdk17u-dev/373526a4
-
Commit
openjdk/jdk18u/8956913e
-
Commit
openjdk/jdk/d32f99ee
-
Review
openjdk/jdk11u-dev/990
-
Review
openjdk/jdk17u-dev/296
-
Review
openjdk/jdk18u/69
-
Review
openjdk/jdk/6952