8279219: [REDO] C2 crash when allocating array of size too large

Reviewed-by: mdoerr
Backport-of: d32f99ee65679601d6e160e7975fc1e367bfa6f4